# megagram

./: README.md
anchor/: Anchor.toml  package.json
anchor/programs/megagram/: Cargo.toml
anchor/programs/megagram/src/: lib.rs
anchor/tests/: megagram.js
frontend/: config-overrides.js  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: CreatePostBox.js  PostCard.js
frontend/src/idl/: megagram.json
frontend/src/pages/: FeedPage.js  LandingPage.js  SetupPage.js
frontend/src/styles/: global.css
frontend/src/utils/: WalletContext.js  programUtils.js
