[package]
name = "megagram"
version = "0.1.0"
description = "Privacy-first decentralized social media on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "megagram"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.29.0"